--- a/Introduction to Machine Learning - 2.ipynb
+++ b/Introduction to Machine Learning - 2.ipynb
@@ -9,24 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jack of Hearts ,  Queen of Spades\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "class Card(object):\n",
+    "    \n",
     "    suit_names = ['Clubs', 'Diamonds', 'Hearts', 'Spades']\n",
     "    rank_names = [None, 'Ace', '2', '3', '4', '5', '6', '7',\n",
     "                  '8', '9', '10', 'Jack', 'Queen', 'King']\n",
     "    \n",
     "    def __init__(self, suit=0, rank=1):\n",
+    "        \n",
     "        self.suit = suit\n",
     "        self.rank = rank\n",
     "        \n",
@@ -38,14 +40,19 @@
     "        if self.suit < other.suit: return True\n",
     "        if self.rank < other.rank: return True\n",
     "        return False\n",
-    "    \"\"\"\n",
+    "    \n",
+    "    def show(self):\n",
+    "        print(Card.rank_names[self.rank] + ' of ' + Card.suit_names[self.suit])\n",
+    "        \n",
+    "    \n",
     "    def __eq__(self, other):\n",
     "        return (self.suit == other.suit) and (self.rank == other.rank)\n",
-    "    \"\"\"\n",
+    "    \n",
     "   \n",
-    "card1 = Card(2, 11)\n",
-    "card2 = Card(3, 12)\n",
-    "print(card1,', ', card2)"
+    "card1 = Card(1, 3)\n",
+    "card2 = Card(1, 3)\n",
+    "\n",
+    "print(card1 == card2)"
    ]
   },
   {
@@ -120,14 +127,17 @@
     "    \n",
     "    def __init__(self):\n",
     "        self.cards = [Card(suit, rank) for suit in range(4)\n",
-    "                      for rank in range(1, 14)]\n",
+    "                          for rank in range(1, 14)]\n",
     "        \n",
     "        \"\"\"\n",
     "        self.cards = []\n",
+    "        \n",
     "        for suit in range(4):\n",
+    "        \n",
     "            for rank in range(1, 14):\n",
-    "            card = Card(suit, rank)\n",
-    "            self.cards.append(card)\n",
+    "            \n",
+    "                card = Card(suit, rank)\n",
+    "                self.cards.append(card)\n",
     "        \"\"\"\n",
     "        \n",
     "    def __str__(self):\n",
@@ -150,15 +160,19 @@
     "        \n",
     "    # ------------------------------------------#\n",
     "    def move_cards(self, hand, num):\n",
+    "        \n",
     "        for i in range(num):\n",
     "            hand.add_card(self.pop_card())\n",
     "    \n",
     "    def deal_hands(self, n_hands, n_cards):\n",
+    "        \n",
     "        hands = []\n",
+    "        \n",
     "        for i in range(n_hands):\n",
     "            new_hand = Hand()\n",
     "            self.move_cards(new_hand, n_cards)\n",
     "            hands.append(new_hand)\n",
+    "            \n",
     "        return hands\n",
     "    \n",
     "deck = Deck()\n",
@@ -168,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,35 +191,48 @@
     "    def __init__(self, label=\" \"):\n",
     "        self.cards = []\n",
     "        self.label = label\n",
-    "        \n",
+    "    \n",
     "    def __repr__(self):\n",
     "        return '(' + ', '.join([str(card) for card in self.cards]) + ')'\n",
-    "        \n",
-    "    "
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n",
+      "No cards in deck.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(King of Spades, Queen of Spades, Jack of Spades, 10 of Spades, 9 of Spades),\n",
-       " (8 of Spades, 7 of Spades, 6 of Spades, 5 of Spades, 4 of Spades),\n",
-       " (3 of Spades, 2 of Spades, Ace of Spades, King of Hearts, Queen of Hearts),\n",
-       " (Jack of Hearts, 10 of Hearts, 9 of Hearts, 8 of Hearts, 7 of Hearts)]"
+       "[(Queen of Clubs, Jack of Clubs, 10 of Clubs, 9 of Clubs, 8 of Clubs),\n",
+       " (7 of Clubs, 6 of Clubs, 5 of Clubs, 4 of Clubs, 3 of Clubs),\n",
+       " (2 of Clubs, Ace of Clubs, None, None, None),\n",
+       " (None, None, None, None, None)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hands = deck.deal_hands(4, 5)\n",
-    "hands"
+    "hands "
    ]
   },
   {
@@ -214,6 +241,24 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -248,7 +293,7 @@
     "    def show(self):\n",
     "        print(self.name + ' ' + self.email)\n",
     "\n",
-    "class Contact(Person, Address):\n",
+    "class Contact(Person, Adress):\n",
     "    def __init__(self, name, email, street, city):\n",
     "        Person.__init__(self, name, email)\n",
     "        Address.__init__(self, street, city)\n",
@@ -284,9 +329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def __init__(self, age):\n",
@@ -294,28 +350,12 @@
     "    def get_age(self):\n",
     "        return self.__age\n",
     "    def set_age(self, age):\n",
-    "        self.__age = age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "person1 = Person(20)\n",
-    "print(person1.get_age())\n",
-    "person1.__age = 30\n",
-    "print(person1.get_age())"
+    "        \n",
+    "        self.__age = int(age)\n",
+    "        \n",
+    "person = Person(20)\n",
+    "person.set_age('100')\n",
+    "type(person.get_age())"
    ]
   },
   {
@@ -327,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,8 +375,8 @@
     "    \n",
     "    def __init__(self, name='Simple Linear Regression'):\n",
     "        self.name = name\n",
-    "        self.a = None\n",
-    "        self.b = None\n",
+    "        self.__a = None\n",
+    "        self.__b = None\n",
     "        \n",
     "    def __str__(self):\n",
     "        return name\n",
@@ -359,25 +399,25 @@
     "        xmean = xsum / n\n",
     "        ymean = ysum / n\n",
     "\n",
-    "        self.b = (n * s - xsum * ysum) / (n * xsq - xsum ** 2)\n",
-    "        self.a = ymean - self.b * xmean\n",
+    "        self.__b = (n * s - xsum * ysum) / (n * xsq - xsum ** 2)\n",
+    "        self.__a = ymean - self.__b * xmean\n",
     "    \n",
     "    def predict(self, x):\n",
     "        \n",
     "        y_pred = []\n",
     "        \n",
     "        for xi in x:\n",
-    "            y_predi = self.a + self.b * xi\n",
+    "            y_predi = self.__a + self.__b * xi\n",
     "            y_pred.append(y_predi)\n",
     "        return y_pred\n",
     "    \n",
     "    def coefficients(self):\n",
-    "        return self.a, self.b"
+    "        return self.__a, self.__b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +432,7 @@
        " 5.696428571428571]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
