linear/logistic regression

--- a/Introduction to Machine Learning - 4.2.ipynb
+++ b/Introduction to Machine Learning - 4.2.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Pandas Seres Object"
+    "## The Pandas Series Object"
    ]
   },
   {
@@ -2465,7 +2465,7 @@
     }
    ],
    "source": [
-    "planets.sum()"
+    "planets[['mass', 'distance']].sum()"
    ]
   },
   {
